fix mobile layout break due to url not breaking

--- a/src/app/components/hit/hit.component.scss
+++ b/src/app/components/hit/hit.component.scss
@@ -31,6 +31,7 @@
       max-width: 120px;
       // pin to right hand side in flex
       margin-left: auto;
+      text-align: right;
     }
   }
 
@@ -52,6 +53,12 @@
 
     @media (min-width: 767px) {
       padding-right: 1rem;
+    }
+
+    .hit-url {
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+      word-break: break-word;
     }
   }
 }
